--- a/index.html
+++ b/index.html
@@ -127,5 +127,7 @@
             </p>
             
         </form>
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
 </body>
 </html>
